--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
   "license": "BSD-3",
   "scripts": {
     "prebuild": "rm -rf ./dist/*",
-    "build": "cp -r ./html/* ./dist/; cat ./style/*.css > ./dist/style.css; browserify . > ./dist/app.js",
-    "clean": "rm -rf ./dist/*",
+    "prebuild": "jison src/grammar/soundlang.jison -o src/parser.js -m commonjs",
+    "build": "browserify . > ./dist/app.js",
+    "postbuild": "cp -r ./html/* ./dist/; cat ./style/*.css > ./dist/style.css;",
+    "clean": "rm -rf ./dist/* src/parser.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "browserify": "^9.0.6"
+    "browserify": "^9.0.6",
+    "jison": "^0.4.15"
   }
 }
