--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "author": "Guy John",
   "license": "BSD-3",
   "scripts": {
-    "prebuild": "rm -rf ./dist/*",
     "prebuild": "jison src/grammar/soundlang.jison -o src/jison-parser.js -m commonjs",
     "build": "browserify . > ./dist/app.js",
     "postbuild": "cp -r ./html/* ./dist/; cat ./style/*.css > ./dist/style.css;",
     "clean": "rm -rf ./dist/* src/jison-parser.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nodeunit tests"
   },
   "devDependencies": {
     "browserify": "^9.0.6",
-    "jison": "^0.4.15"
+    "jison": "^0.4.15",
+    "nodeunit": "^0.9.1"
   }
 }
