Changing name in relevant places

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "websound",
+  "name": "whorl",
   "version": "0.1.0",
   "description": "A web based audio live coding environment",
   "main": "src/main.js",
