--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "clean": "rm -rf ./dist/* src/jison-parser.js",
     "test": "nodeunit tests",
     "prepages": "npm run-script build",
-    "pages": "git checkout gh-pages; cp ./dist/* .; git add app.js index.html style.css; git ci -m 'Updating pages';",
+    "pages": "git checkout gh-pages; cp ./dist/* .; git add app.js index.html style.css; git ci -m 'Updating pages'; git push origin gh-pages",
     "postpages": "git checkout master; git clean -dfx; git submodule update --init; npm install; npm run-script build"
   },
   "devDependencies": {
