--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "nodeunit tests",
     "prepages": "npm run-script build",
     "pages": "git checkout gh-pages; cp ./dist/* .; git add app.js index.html style.css favicon.ico; git ci -m 'Updating pages'; git push origin gh-pages",
-    "postpages": "git checkout master; git clean -dfx; git submodule update --init; npm install; npm run-script build"
+    "postpages": "git checkout master;"
   },
   "devDependencies": {
     "browserify": "^9.0.6",
