--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "author": "Guy John",
   "license": "BSD-3",
   "scripts": {
-    "prebuild": "jison src/grammar/soundlang.jison -o src/jison-parser.js -m commonjs",
+    "gendemos": "./scripts/progbuild.py ./src/demos ./src/generated",
+    "genparser": "jison src/grammar/soundlang.jison -o src/jison-parser.js -m commonjs",
+
+    "prebuild": "npm run genparser & npm run gendemos",
     "build": "browserify . > ./dist/app.js",
     "postbuild": "cp -r ./html/* ./dist/; cat ./style/*.css > ./dist/style.css;",
     "clean": "rm -rf ./dist/* src/jison-parser.js",
     "test": "nodeunit tests",
-    "prepages": "npm run-script build",
+
+    "prepages": "npm run build",
     "pages": "git checkout gh-pages; cp ./dist/* .; git add app.js index.html style.css favicon.ico; git ci -m 'Updating pages'; git push origin gh-pages",
     "postpages": "git checkout master;"
   },
