--- a/package.json
+++ b/package.json
@@ -9,20 +9,24 @@
     "gendemos": "./scripts/progbuild.py ./src/demos ./src/generated",
     "gentutorials": "./scripts/progbuild.py ./src/tutorials ./src/generated",
     "genparser": "jison src/grammar/soundlang.jison -o src/jison-parser.js -m commonjs",
-
     "prebuild": "npm run genparser & npm run gendemos & npm run gentutorials",
     "build": "browserify . > ./dist/app.js",
     "postbuild": "cp -r ./html/* ./dist/; cat ./style/*.css > ./dist/style.css;",
     "clean": "rm -rf ./dist/* src/jison-parser.js",
     "test": "nodeunit tests",
-
     "prepages": "npm run build",
     "pages": "git checkout gh-pages; cp ./dist/* .; git add app.js index.html style.css favicon.ico; git ci -m 'Updating pages'; git push origin gh-pages",
     "postpages": "git checkout master;"
   },
   "devDependencies": {
-    "browserify": "^9.0.6",
+    "browserify": "^9.0.8",
     "jison": "^0.4.15",
-    "nodeunit": "^0.9.1"
+    "nodeunit": "^0.9.1",
+    "reactify": "^1.1.0"
+  },
+  "browserify": {
+    "transform": [
+        ["reactify", {"strip-types": true}]
+    ]
   }
 }
