--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   "scripts": {
     "gendemos": "./scripts/progbuild.py ./src/demos ./src/generated",
     "gentutorials": "./scripts/progbuild.py ./src/tutorials ./src/generated",
-    "genparser": "jison src/grammar/soundlang.jison -o src/jison-parser.js -m commonjs",
+    "genparser": "jison src/grammar/soundlang.jison -o src/generated/jison-parser.js -m commonjs",
+    "compile": "browserify . > ./dist/app.js",
     "prebuild": "npm run genparser & npm run gendemos & npm run gentutorials",
-    "build": "browserify . > ./dist/app.js",
+    "build": "npm run compile",
     "postbuild": "cp -r ./html/* ./dist/; cat ./style/*.css > ./dist/style.css;",
-    "clean": "rm -rf ./dist/* src/jison-parser.js",
+    "clean": "rm -rf ./dist/* ./src/generated/*",
     "test": "nodeunit tests",
     "prepages": "npm run build",
     "pages": "git checkout gh-pages; cp ./dist/* .; git add app.js index.html style.css favicon.ico; git ci -m 'Updating pages'; git push origin gh-pages",
