--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "test": "nodeunit tests",
     "prepages": "npm run build",
     "pages": "git checkout gh-pages; cp ./dist/* .; git add app.js index.html style.css favicon.ico; git ci -m 'Updating pages'; git push origin gh-pages",
-    "postpages": "git checkout master;"
+    "postpages": "git checkout master;",
+    "serve": "http-server ./dist"
   },
   "devDependencies": {
     "browserify": "^9.0.8",
+    "http-server": "^0.8.0",
     "jison": "^0.4.15",
     "nodeunit": "^0.9.1",
     "thicket": "git://github.com/rumblesan/thicket.git"
