--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "babelify": "^6.3.0",
     "browserify": "^9.0.8",
     "http-server": "^0.8.0",
-    "jison": "^0.4.15",
+    "jison": "git@github.com:rumblesan/jison.git#strictfix",
     "nodeunit": "^0.9.1",
     "thicket": "git://github.com/rumblesan/thicket.git"
   }
