--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "babelify": "^6.3.0",
     "browserify": "^11.2.0",
     "http-server": "^0.8.0",
-    "jison": "rumblesan/jison#strictfix",
+    "jison": "zaach/jison",
     "nodeunit": "^0.9.1",
     "watchify": "^3.4.0"
   }
