--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "test": "nodeunit tests"
   },
   "dependencies": {
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^6.3.0",
+    "browserify": "^11.2.0",
+    "flux": "^2.1.1",
+    "jison": "zaach/jison",
+    "lodash": "^4.6.1",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
     "thicket": "git://github.com/rumblesan/thicket.git"
   },
   "devDependencies": {
-    "babelify": "^6.3.0",
-    "browserify": "^11.2.0",
     "http-server": "^0.8.0",
-    "jison": "zaach/jison",
-    "nodeunit": "^0.9.1",
-    "watchify": "^3.4.0"
+    "nodeunit": "^0.9.1"
   }
 }
