--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
+    "codemirror": "^5.13.2",
     "flux": "^2.1.1",
     "jison": "zaach/jison",
     "lodash": "^4.6.1",
     "react": "^0.14.7",
+    "react-codemirror": "^0.2.5",
     "react-dom": "^0.14.7",
     "thicket": "git://github.com/rumblesan/thicket.git"
   },
