--- a/package.json
+++ b/package.json
@@ -1,30 +1,39 @@
 {
   "name": "whorl",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "A web based audio live coding environment",
   "main": "src/main.js",
   "author": "Guy John",
   "license": "BSD-3-Clause",
   "repository": "rumblesan/whorl",
   "scripts": {
-    "test": "nodeunit tests"
+    "build": "webpack -p",
+    "devbuild": "webpack -d",
+    "serve": "webpack-dev-server -d --content-base dist/ --inline --host 0.0.0.0",
+    "test": "mocha-webpack --webpack-config webpack.config.js \"tests/**/*.js\""
   },
   "dependencies": {
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
-    "babelify": "^7.2.0",
-    "browserify": "^13.0.0",
     "codemirror": "^5.13.2",
-    "flux": "^2.1.1",
+    "css-loader": "^0.26.1",
+    "file-loader": "^0.9.0",
     "jison": "zaach/jison",
+    "jison-loader": "^1.0.0",
     "lodash": "^4.6.1",
+    "mocha": "^3.2.0",
+    "mocha-webpack": "^0.7.0",
     "react": "^0.14.7",
     "react-codemirror": "^0.2.5",
     "react-dom": "^0.14.7",
-    "thicket": "git://github.com/rumblesan/thicket.git"
-  },
-  "devDependencies": {
-    "http-server": "^0.8.0",
-    "nodeunit": "^0.9.1"
+    "react-redux": "^5.0.1",
+    "redux": "^3.6.0",
+    "style-loader": "^0.13.1",
+    "thicket": "git://github.com/rumblesan/thicket.git",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2"
   }
 }
